// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create header whit input should create header 1`] = `
<header
  className="nav-header"
>
  <div
    className="container-general"
  >
    <div
      className="row justify-content-center mt-2"
    >
      <div
        className="col-11 col-lg-10"
      >
        <div
          className="row justify-content-between"
        >
          <div
            className="col-2 col-lg-1"
          >
            <div
              className="nav-logo-container"
            >
              <a
                className="nav-logo"
              />
            </div>
          </div>
          <div
            className="col-10 col-lg-11"
          >
            <div
              className="nav-input-container"
            >
              <form
                className="nav-form"
                onSubmit={[Function]}
              >
                <input
                  className="nav-input"
                  onChange={[Function]}
                  placeholder="Nunca dejes de buscar"
                  type="text"
                  value=""
                />
                <button
                  className="nav-button"
                />
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`should create header whit input should create header with serach parameter queryString 1`] = `
<header
  className="nav-header"
>
  <div
    className="container-general"
  >
    <div
      className="row justify-content-center mt-2"
    >
      <div
        className="col-11 col-lg-10"
      >
        <div
          className="row justify-content-between"
        >
          <div
            className="col-2 col-lg-1"
          >
            <div
              className="nav-logo-container"
            >
              <a
                className="nav-logo"
              />
            </div>
          </div>
          <div
            className="col-10 col-lg-11"
          >
            <div
              className="nav-input-container"
            >
              <form
                className="nav-form"
                onSubmit={[Function]}
              >
                <input
                  className="nav-input"
                  onChange={[Function]}
                  placeholder="Nunca dejes de buscar"
                  type="text"
                  value="furtbol"
                />
                <button
                  className="nav-button"
                />
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`should create header whit input should handleSubmitSearch and param search 1`] = `
<header
  className="nav-header"
>
  <div
    className="container-general"
  >
    <div
      className="row justify-content-center mt-2"
    >
      <div
        className="col-11 col-lg-10"
      >
        <div
          className="row justify-content-between"
        >
          <div
            className="col-2 col-lg-1"
          >
            <div
              className="nav-logo-container"
            >
              <a
                className="nav-logo"
              />
            </div>
          </div>
          <div
            className="col-10 col-lg-11"
          >
            <div
              className="nav-input-container"
            >
              <form
                className="nav-form"
                onSubmit={[Function]}
              >
                <input
                  className="nav-input"
                  onChange={[Function]}
                  placeholder="Nunca dejes de buscar"
                  type="text"
                  value="trajes"
                />
                <button
                  className="nav-button"
                />
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`should create header whit input should input set param 1`] = `
<header
  className="nav-header"
>
  <div
    className="container-general"
  >
    <div
      className="row justify-content-center mt-2"
    >
      <div
        className="col-11 col-lg-10"
      >
        <div
          className="row justify-content-between"
        >
          <div
            className="col-2 col-lg-1"
          >
            <div
              className="nav-logo-container"
            >
              <a
                className="nav-logo"
              />
            </div>
          </div>
          <div
            className="col-10 col-lg-11"
          >
            <div
              className="nav-input-container"
            >
              <form
                className="nav-form"
                onSubmit={[Function]}
              >
                <input
                  className="nav-input"
                  onChange={[Function]}
                  placeholder="Nunca dejes de buscar"
                  type="text"
                  value="arbol"
                />
                <button
                  className="nav-button"
                />
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`should create header whit input should submit with param search empty 1`] = `
<header
  className="nav-header"
>
  <div
    className="container-general"
  >
    <div
      className="row justify-content-center mt-2"
    >
      <div
        className="col-11 col-lg-10"
      >
        <div
          className="row justify-content-between"
        >
          <div
            className="col-2 col-lg-1"
          >
            <div
              className="nav-logo-container"
            >
              <a
                className="nav-logo"
              />
            </div>
          </div>
          <div
            className="col-10 col-lg-11"
          >
            <div
              className="nav-input-container"
            >
              <form
                className="nav-form"
                onSubmit={[Function]}
              >
                <input
                  className="nav-input"
                  onChange={[Function]}
                  placeholder="Nunca dejes de buscar"
                  type="text"
                  value=""
                />
                <button
                  className="nav-button"
                />
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</header>
`;
